--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "micro-bot": "^2.5.3"
+    "micro-bot": "^2.5.3",
+    "telegraf": "^4.3.0"
   }
 }
